# ragpdf

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: example-01.py  example-02.py  example-03.py
raggifypdf/: crop_funcs.py  image_funcs.py  pdf_funcs.py  raggify.py
ragpdf/: config.py  crop_funcs.py  image_funcs.py  pdf_funcs.py  raggify.py  ragpdf.py
scripts/: train_yolo.py
